# Air_Quality_Forecasting

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  streamlit_app.py
configs/: config.yaml
scripts/: predict.py  train.py
src/air_quality/: __init__.py  config.py
src/air_quality/data/: __init__.py  fetcher.py  preprocessor.py
src/air_quality/evaluation/: __init__.py  metrics.py
src/air_quality/features/: __init__.py  engineering.py
src/air_quality/models/: __init__.py  base.py  lgbm_model.py  lstm.py  xgboost_model.py
src/air_quality/training/: __init__.py  trainer.py  tuner.py
src/air_quality/visualization/: __init__.py  plots.py
tests/: confest.py  test_data.py  test_features.py  test_models.py
